--- a/oasis-webapp/src/main/resources/templates/messages_fr.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_fr.xlf
@@ -171,11 +171,6 @@
         <target>Connexion</target>
         <note priority="1" from="description">Login page title</note>
       </trans-unit>
-      <trans-unit id="2455036635324175768" datatype="html">
-        <source>The information collected will be computer processed for the management of the website’s users and its services. The recipient of data is Pôle Numérique.<x id="START_BREAK"/>In accordance with the EU Data Protection Directive (95/46/EC), you benefit from an access and modification right for the information concerning you, which you can exercise by contacting Pôle Numérique, 1 avenue de la gare 26958 VALENCE Cedex 9, FRANCE.<x id="START_BREAK"/>You can also, for legitimate reasons, object to the processing of your personal data.</source>
-        <target>Les informations recueillies font l’objet d’un traitement informatique destiné à la gestion des utilisateurs du site communautaire et à ses services. Le destinataire des données est le Pôle Numérique.<x id="START_BREAK"/>Conformément à la loi française n°78-17 du 6 janvier 1978 modifiée et à la directive européenne 95/46/EC sur la protection des données, vous bénéficiez d’un droit d’accès et de rectification aux informations qui vous concernent, que vous pouvez exercer en vous adressant à Pôle Numérique, 1 avenue de la gare 26958 VALENCE Cedex 9.<x id="START_BREAK"/>Vous pouvez également, pour des motifs légitimes, vous opposer au traitement des données vous concernant.</target>
-        <note priority="1" from="description">privacy notice / small prints</note>
-      </trans-unit>
       <trans-unit id="2496403555934573530" datatype="html">
         <source>You're not currently using a certificate.</source>
         <target>Vous n'utilisez pas actuellement un certificat.</target>
@@ -565,6 +560,11 @@
         <source>Join Us!</source>
         <target>Inscription</target>
         <note priority="1" from="description">Sign-up form heading</note>
+      </trans-unit>
+      <trans-unit id="8684213669198888405" datatype="html">
+        <source>The information collected will be computer processed for the management of the website’s users and its services. The recipient of data is Ozwillo.<x id="START_BREAK"/>In accordance with the EU Data Protection Directive (95/46/EC), you benefit from an access and modification right for the information concerning you, which you can exercise by contacting Ozwillo, 2323 Chemin de Saint-Bernard, 06225 Vallauris, FRANCE.<x id="START_BREAK"/>You can also, for legitimate reasons, object to the processing of your personal data.</source>
+        <target>Les informations recueillies font l’objet d’un traitement informatique destiné à la gestion des utilisateurs du site communautaire et à ses services. Le destinataire des données est Ozwillo.<x id="START_BREAK"/>Conformément à la loi française n°78-17 du 6 janvier 1978 modifiée et à la directive européenne 95/46/EC sur la protection des données, vous bénéficiez d’un droit d’accès et de rectification aux informations qui vous concernent, que vous pouvez exercer en vous adressant à Ozwillo, 2323 Chemin de Saint-Bernard, 06225 Vallauris.<x id="START_BREAK"/>Vous pouvez également, pour des motifs légitimes, vous opposer au traitement des données vous concernant.</target>
+        <note priority="1" from="description">privacy notice / small prints</note>
       </trans-unit>
       <trans-unit id="8901230246167053053" datatype="html">
         <source>You've signed out of <x id="START_BOLD"/><x id="APP_NAME"/><x id="END_BOLD"/></source>
