--- a/oasis-webapp/src/main/resources/templates/messages_fr.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_fr.xlf
@@ -3,8 +3,8 @@
   <file original="SoyMsgBundle" datatype="x-soy-msg-bundle" xml:space="preserve" source-language="en-GB" target-language="fr-FR">
     <body>
       <trans-unit id="85256968653381481" datatype="html">
-        <source>https://www.ozwillo.com/en/terms</source>
-        <target>https://www.ozwillo.com/fr/cgu</target>
+        <source>https://www.ozwillo.com/en/legal-notices</source>
+        <target>https://www.ozwillo.com/fr/mentions-legales</target>
         <note priority="1" from="description">terms of use URL</note>
       </trans-unit>
       <trans-unit id="112067034614295505" datatype="html">
