Update URL to terms of use for Bulgarian locale
Change-Id: I3c6f5780b398ebf500bf71e31e58a70b7b673b98

--- a/oasis-webapp/src/main/resources/templates/messages_bg.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_bg.xlf
@@ -4,7 +4,7 @@
     <body>
       <trans-unit id="85256968653381481" datatype="html">
         <source>https://www.ozwillo.com/en/terms</source>
-        <target>https://www.ozwillo.com/bg/uslovia</target>
+        <target>https://www.ozwillo.com/bg/%D0%A3%D1%81%D0%BB%D0%BE%D0%B2%D0%B8%D1%8F-%D0%B7%D0%B0-%D0%BF%D0%BE%D0%BB%D0%B7%D0%B2%D0%B0%D0%BD%D0%B5</target>
         <note priority="1" from="description">terms of use URL</note>
       </trans-unit>
       <trans-unit id="112067034614295505" datatype="html">
